--- a/charts/mgt-cluster/values.yaml
+++ b/charts/mgt-cluster/values.yaml
@@ -42,7 +42,7 @@ hCloud:
       buildTimestamp: "1744783000"
       imageName: >-
         {{- $machines := (include "machines" $) | fromYaml -}}
-        cluster-api-ubuntu-{{ $machines.cp.osVersion }}-{{ $machines.cp.k8sVersion }}-{{ $machines.cp.buildTimestamp }}
+        cluster-api-ubuntu-{{ $machines.worker.osVersion }}-{{ $machines.worker.k8sVersion }}-{{ $machines.worker.buildTimestamp }}
       replicas: 3
       autoscaler:
         enabled: false
@@ -73,7 +73,7 @@ kubeadm:
       enabled: true
       clientId: kubectl-oidc-{{ include "cluster-name" . }}
       issuerUrl: https://sso.mgt.unbyte.de/realms/unbyte
-      # Since our issuer uses letsencrypt cert, we dont need to set the ca cert
+      # Since our issuer uses letsencrypt cert, we don't need to set the ca cert
       caFile: ""
       useExistingSecretForCa: false
     # # Increased default toleration times for NotReady and Unreachable states.
@@ -253,6 +253,7 @@ install:
       namespace: kube-system
       values: |-
         customDnsIp: "$(kubectl get -n kube-system cm custom-dns -o jsonpath='{.data.PDNS_RECURSOR_IP}')"
+        customDnsLog: false
         {{- if .Values.kubeadm.disableKubeProxy }}
         kubeApiServerLoadBalancerIp: "$(HOSTIP="" && while [[ -z "$HOSTIP" ]]; \
           do HOSTIP=$(kubectl get HetznerCluster -n {{ include "cluster-name" . }} {{ include "cluster-name" . }} -o yaml \
