--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
   rev: "3.5.0"
   hooks:
   - id: editorconfig-checker
+    args: [--exclude=LICENSE]
 - repo: https://github.com/adrienverge/yamllint.git
   rev: v1.37.1
   hooks:
