--- a/charts/workload-cluster/Chart.yaml
+++ b/charts/workload-cluster/Chart.yaml
@@ -1,12 +1,12 @@
 ---
 apiVersion: v2
-name: unbyte-cluster
-description: An umbrella chart for a workload (k8s) cluster for Unbyte.
+name: workload-cluster
+description: An umbrella chart for a workload (k8s) cluster.
 type: application
-version: 0.9.12
+version: 0.10.0-rc.1
 dependencies:
 - name: cluster
-  version: 0.9.12
+  version: 0.10.0-rc.1
   # repository: https://gitlab.com/api/v4/projects/65336103/packages/helm/stable
   repository: file://../cluster
   import-values:
