--- a/charts/cluster/templates/_controlplane-nodes.yaml
+++ b/charts/cluster/templates/_controlplane-nodes.yaml
@@ -20,173 +20,7 @@ spec:
   template:
     spec: {{- include "cp-hcloud-machine-template-spec" . | nindent 6 }}
 {{- end }}
-{{- if eq .Values.capi.providers.controlPlane.name "talos" }}
----
-apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
-kind: TalosControlPlane
-metadata:
-  name: {{ include "cp-name" . }}
-  namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "cluster.labels" . | nindent 4 }}
-  # annotations:
-  #   argocd.argoproj.io/sync-wave: ""
-spec:
-  controlPlaneConfig:
-    controlplane:
-      strategicPatches:
-      # https://www.talos.dev/v1.8/talos-guides/install/cloud-platforms/hetzner/#install-hetzners-cloud-controller-manager
-      # https://github.com/hetznercloud/hcloud-cloud-controller-manager
-      - |
-        cluster:
-          externalCloudProvider:
-            enabled: true
-      # https://www.talos.dev/v1.8/kubernetes-guides/network/deploying-cilium/#machine-config-preparation
-      - |
-        cluster:
-          network:
-            cni:
-              name: none
-          proxy:
-            disabled: true
-      # https://www.talos.dev/v1.8/talos-guides/network/kubespan/#creating-a-new-cluster
-      # https://www.talos.dev/v1.8/talos-guides/network/kubespan/#configuration
-      # Hcloud has a MTU of 1450 (KubeSpanMTU = UnderlyingMTU - 80)
-      # - |
-      #   machine:
-      #     network:
-      #       kubespan:
-      #         enabled: true
-      #         advertiseKubernetesNetworks: false
-      #         allowDownPeerBypass: false
-      #         mtu: 1370
-      # - |
-      #   cluster:
-      #       discovery:
-      #           enabled: true
-      #           # Configure registries used for cluster member discovery.
-      #           registries:
-      #               kubernetes: # Kubernetes registry is problematic with KubeSpan, if the control plane endpoint is routeable itself via KubeSpan.
-      #                 disabled: true
-      #               service: {}
-      # https://github.com/siderolabs/talos-cloud-controller-manager/blob/main/docs/install.md#prepare-nodes
-      - |
-        machine:
-          kubelet:
-            extraArgs:
-              cloud-provider: external
-              # For security reasons, it is recommended to enable the rotation of server certificates.
-              rotate-server-certificates: true
-          features:
-            kubernetesTalosAPIAccess:
-              enabled: true
-              allowedRoles:
-                - os:reader
-              allowedKubernetesNamespaces:
-                - kube-system
-      - |
-        machine:
-          install:
-            image: ghcr.io/siderolabs/installer:{{ $machines.cp.osVersion }}
-            extraKernelArgs:
-              - "ipv6.disable=1"
-          {{- with .Values.hCloud.lb.existing.ip }}
-          certSANs:
-          - {{ . | quote }}
-          {{- end }}
-          network:
-            # extraHostEntries:
-            interfaces:
-            - interface: eth0
-              dhcp: true
-              # dhcpOptions:
-              #   routeMetric: 1024
-              # routes:
-              # - network: 0.0.0.0/0 # The route's network (destination).
-              #   gateway: 10.0.0.1 # The gateway IP address. First IP in the subnet.
-          # sysctls:
-          #   net.core.somaxconn: "65535"
-          #   net.core.netdev_max_backlog: "4096"
-          features:
-            hostDNS:
-          #     enabled: true
-          #     forwardKubeDNSToHost: true
-              resolveMemberNames: true
-          # time:
-          #   servers:
-          #   - "ntp1.hetzner.de"
-          #   - "ntp2.hetzner.com"
-          #   - "ntp3.hetzner.net"
-          #   - "time.cloudflare.com"
-          # RegistriesConfig represents the image pull options.
-          # registries:
-          {{- if $networking.hcloudNetworkEnabled }}
-          kubelet:
-            nodeIP:
-              validSubnets:
-              - "{{ $networking.subnetIpv4Cidr }}"
-          {{- end }}
-        cluster:
-          network:
-            dnsDomain: cluster.local
-            podSubnets:
-              - "{{ $networking.podsIpv4Cidr }}"
-            serviceSubnets:
-              - "{{ $networking.servicesIpv4Cidr }}"
-          # apiServer:
-          #   # NOTE: LB IP is added automatically here.
-          #   certSANs:
-          #   extraArgs:
-          controllerManager:
-            extraArgs:
-              cloud-provider: external
-              {{- if $networking.hcloudNetworkEnabled }}
-              node-cidr-mask-size-ipv4: {{ $networking.subnetIpv4Cidr | splitList "/" | last }}
-              {{- end }}
-              bind-address: "0.0.0.0"
-              # https://github.com/siderolabs/talos-cloud-controller-manager/blob/main/docs/install.md#example
-              # Disable node IPAM controller
-              # controllers: "*,tokencleaner,-node-ipam-controller"
-          coreDNS:
-              disabled: false
-          etcd:
-            image: gcr.io/etcd-development/etcd:{{ .Values.talos.etcd.version }}
-            {{- if $networking.hcloudNetworkEnabled }}
-            advertisedSubnets:
-              - "{{ $networking.subnetIpv4Cidr }}"
-            {{- end }}
-            extraArgs:
-              listen-metrics-urls: http://0.0.0.0:2381
-              election-timeout: "{{ .Values.talos.etcd.electionTimeout }}"
-          scheduler:
-            extraArgs:
-              bind-address: "0.0.0.0"
-      {{- with .Values.talos.machine.registries.mirrors }}
-      - |
-        machine:
-          registries:
-            mirrors:
-              {{- . | toYaml | nindent 14 }}
-      {{- end }}
-      generateType: controlplane
-      # When we set this, there were errors with certificate signing requests for node (it was using wrong DNS names).
-      # hostname:
-      #   source: "MachineName"
-      talosVersion: {{ $machines.cp.osVersion }}
-  infrastructureTemplate:
-    apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
-    kind: HCloudMachineTemplate
-    name: {{ include "cp-hcloud-machine-template-name" . }}
-    namespace: {{ .Release.Namespace }}
-  replicas: {{ $machines.cp.replicas }}
-  {{- /*
-  rolloutStrategy:
-    # Supported strategies: "RollingUpdate" and "OnDelete"
-    type: "RollingUpdate"
-    rollingUpdate:
-  */}}
-  version: {{ $machines.cp.k8sVersion }}
-{{- else if eq .Values.capi.providers.controlPlane.name "kubeadm" }}
+{{- if eq .Values.capi.providers.controlPlane.name "kubeadm" }}
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 kind: KubeadmControlPlane
