--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,8 @@ repos:
   rev: "3.5.0"
   hooks:
   - id: editorconfig-checker
-    args: [--exclude=LICENSE]
+    args:
+    - --exclude=LICENSE
 # - repo: https://github.com/adrienverge/yamllint.git
 #   rev: v1.37.1
 #   hooks:
@@ -13,7 +14,7 @@ repos:
 #     - -c=./.yamllint
 # https://github.com/google/yamlfmt/blob/main/docs/pre-commit.md
 - repo: https://github.com/google/yamlfmt.git
-  rev: v0.20.0
+  rev: v0.21.0
   hooks:
   - id: yamlfmt
     # In pre-commit we run yamlfmt in "lint" mode.
